fix(test): BootstrapExampleSeedTest 路径 + 4 IT fixture static 化
- BootstrapExampleSeedTest：CI 在 backend/ 工作目录跑 mvn test，
  改用 REPO_ROOT = Path.of('..').toAbsolutePath().normalize() +
  相对路径，断言所有路径文件可读
- 4 个新 IT（IdempotencyBehaviorIT / RefreshTokenSecurityIT /
  IdempotencyPutPatchIT / SettingsPatchBehaviorIT）：
  之前用 static volatile FIX_INIT + 实例字段（schoolId / userId / tenantId），
  JUnit 5 每个 @Test 一个新实例 → 第二个测试方法时实例字段为 null
  改：所有 fixture 字段声明为 static，ensureFixtures 内对 static 赋值；
  多次 JUnit 实例共享同一组 fixture